--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="row">
+  <div class="container">
+    <div>
+      <%= image_tag "banner.jpg" %>
+
+    </div>
+    <div class="col-8">
+      <p>Skills Development. Our aim is to instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas. Be part of Women in Construction Programmes. Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
+    </div>
+  </div>
+</div>
