--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="container">
     <div>
-      <%= image_tag "banner.jpg" %>
+      <%= image_tag "banner-1.jpg" %>
 
     </div>
     <div class="col-8">
