home page looking better

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,3 +9,15 @@
     </div>
   </div>
 </div>
+
+
+<div class="banner">
+  <div class="row"style="background-color:#ED4631;">
+    <div class="col-6">
+        <%= image_tag "banner.jpg" %>
+    </div>
+    <div class="col-6" style="background-color:#ED4631;">
+        <h1>Breaking barrierrs to learning.</h1>
+    </div>
+  </div>
+</div>
