more infor on first banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,8 +16,10 @@
     <div class="col-6">
         <%= image_tag "banner.jpg" %>
     </div>
-    <div class="col-6" style="background-color:#ED4631;">
+    <div class="col-6" style="background-color:#ED4631; text-align: center; align-items: center;">
         <h1>Breaking barrierrs to learning.</h1>
+              <p>Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
+
     </div>
   </div>
 </div>
