--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,9 +30,9 @@
 }
 
 .banner p {
-  font-size: 20px;
+  font-size: 1.75rem;
   color: white;
-  opacity: .7;
+  opacity: .3;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
