--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
+  // padding: 100px 0;
   background-repeat: no-repeat;
   position: relative;
 }
@@ -30,9 +30,8 @@
 }
 
 .banner p {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   color: white;
-  opacity: .3;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
