--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,20 @@
-<div class="row">
-  <div class="container">
-    <div>
-      <%= image_tag "banner-1.jpg" %>
-
-    </div>
-    <div class="col-8">
-      <p>Skills Development. Our aim is to instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas. Be part of Women in Construction Programmes. Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
-    </div>
-  </div>
-</div>
-
 
 <div class="banner">
   <div class="row"style="background-color:#ED4631;">
+    <div class="col-6 mt-3" style="background-color:#ED4631;align-items: center;">
+        <h1 style="text-align: center; padding-top: 64px;" >Breaking barrierrs to learning.</h1>
+              <p style="text-align:left; padding-top: 64px;">Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
+
+    </div>
     <div class="col-6">
         <%= image_tag "banner.jpg" %>
     </div>
-    <div class="col-6" style="background-color:#ED4631; text-align: center; align-items: center;">
-        <h1>Breaking barrierrs to learning.</h1>
-              <p>Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
+  </div>
+</div>
+<div class="banner">
+  <div class="row">
+    <div class="col-6" style="position: relative; margin:0 auto;">
+    <h1 class="mt-5" style="text-align: center; color:black;"> Our Programmes</h1>
 
     </div>
   </div>
