--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,5 +17,11 @@
     <h1 class="mt-5" style="text-align: center; color:black;"> Our Programmes</h1>
 
     </div>
+<div class="col-12">
+
+  <div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+  Breakfast
+</div>
+</div>
   </div>
 </div>
