--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,10 +18,25 @@
 
     </div>
 <div class="col-12">
-
-  <div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  Breakfast
+  <div class="articles-grid">
+  <div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
+  Carpentry
 </div>
+<div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "plumbing.jpeg" %>)">
+  Plumbing
+</div>
+<div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "welding.jpeg" %>)">
+  Welding
+</div>
+<div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "entrepeneur.jpeg" %>)">
+  Entrepeneurship
+</div>
+<div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
+  Carpentry
+</div>
+
+  </div>
+
 </div>
   </div>
 </div>
