--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,12 @@
 <div class="banner">
   <div class="row"style="background-color:#ED4631;">
     <div class="col-6 mt-3" style="background-color:#ED4631;align-items: center;">
+      <div class="container">
+
         <h1 style="text-align: center; padding-top: 64px;" >Breaking barrierrs to learning.</h1>
-              <p style="text-align:left; padding-top: 64px;">Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
+              <p style="text-align:left; padding-top: 64px; padding-left:24px;">Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
+
+      </div>
 
     </div>
     <div class="col-6">
@@ -12,31 +16,28 @@
   </div>
 </div>
 <div class="banner">
-  <div class="row">
-    <div class="col-6" style="position: relative; margin:0 auto;">
-    <h1 class="mt-5" style="text-align: center; color:black;"> Our Programmes</h1>
+  <div class="container">
 
-    </div>
-<div class="col-12">
+    <h1 class="my-5" style="text-align: center; color:black; position:relative; margin:0 auto;"> Our Programmes</h1>
   <div class="articles-grid">
-  <div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
+  <div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
   Carpentry
 </div>
-<div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "plumbing.jpeg" %>)">
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "plumbing.jpeg" %>)">
   Plumbing
 </div>
-<div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "welding.jpeg" %>)">
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "welding.jpeg" %>)">
   Welding
 </div>
-<div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "entrepeneur.jpeg" %>)">
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "entrepeneur.jpeg" %>)">
   Entrepeneurship
 </div>
-<div class="card-category col-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
   Carpentry
 </div>
 
   </div>
 
-</div>
   </div>
+
 </div>
