--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <div class="col-6 mt-3" style="background-color:#ED4631;align-items: center;">
       <div class="container">
 
-        <h1 style="text-align: center; padding-top: 64px;" >Breaking barrierrs to learning.</h1>
+        <h1 style="text-align: center; padding-top: 64px;" >BREAKING BARRIERS TO LEARNING</h1>
               <p style="text-align:left; padding-top: 64px; padding-left:24px;">Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
 
       </div>
@@ -15,10 +15,10 @@
     </div>
   </div>
 </div>
-<div class="banner">
-  <div class="container">
+<div class="banner" style="background-color: #A7A8AA;">
+  <div class="container" style="background-color: #A7A8AA;">
 
-    <h1 class="my-5" style="text-align: center; color:black; position:relative; margin:0 auto;"> Our Programmes</h1>
+    <h1 class="my-5" style="text-align: center; color:black; position:relative; margin:0 auto; padding-top: 24px;"> Our Programmes</h1>
   <div class="articles-grid">
   <div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
   Carpentry
