--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,20 +5,20 @@
       <div class="container">
 
         <h1 style="text-align: center; padding-top: 64px;" >BREAKING BARRIERS TO LEARNING</h1>
-              <p style="text-align:left; padding-top: 64px; padding-left:24px;">Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
+              <p style="text-align:left; padding-top: 64px; padding-left:24px;">Our aim is to instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas. Be part of Women in Construction Programmes.Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
 
       </div>
 
     </div>
     <div class="col-6">
-        <%= image_tag "banner.jpg" %>
+        <%= image_tag "banner-1.jpg" %>
     </div>
   </div>
 </div>
 <div class="banner" style="background-color: #A7A8AA;">
   <div class="container" style="background-color: #A7A8AA;">
 
-    <h1 class="my-5" style="text-align: center; color:black; position:relative; margin:0 auto; padding-top: 24px;"> Our Programmes</h1>
+    <h1 class="mb-5" style="text-align: center; color:black; position:relative; margin:0 auto; padding-top: 88px;"> OUR PROGRAMMES</h1>
   <div class="articles-grid">
   <div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
   Carpentry
@@ -32,8 +32,11 @@
 <div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "entrepeneur.jpeg" %>)">
   Entrepeneurship
 </div>
-<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "carpentry.jpeg" %>)">
-  Carpentry
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "electronics.jpeg" %>)">
+  Electronics
+</div>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "brick-masonry.jpeg" %>)">
+  Brick Laying/Masonry
 </div>
 
   </div>
