--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 
-<div class="banner">
+<div class="banner" >
   <div class="row"style="background-color:#ED4631;">
     <div class="col-6 mt-3" style="background-color:#ED4631;align-items: center;">
       <div class="container">
 
-        <h1 style="text-align: center; padding-top: 64px;" >BREAKING BARRIERS TO LEARNING</h1>
-              <p style="text-align:left; padding-top: 64px; padding-left:24px;">Our aim is to instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas. Be part of Women in Construction Programmes.Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p>
+        <h1 style="text-align: center; padding-top: 64px;" ><i> BREAKING BARRIERS TO LEARNING </i></h1>
+              <p style="text-align:left; padding-top: 64px; padding-left:24px;">We instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas.Through a variety of training programmes, as well as jump start job creation initiatives and basic skills develpoment programmes we aim to alleviate poverty and uplift our community. Be part of our Women in Construction Programmes. Some of our training programmes include : Soft skills development, Entrepreneurship Programmes, Bricklaying (Masonry), Plastering & Tiling , Roof Finishing,Carpentry, Plumbing, Welding, Electronics.</p>
 
       </div>
 
@@ -38,9 +38,15 @@
 <div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "brick-masonry.jpeg" %>)">
   Brick Laying/Masonry
 </div>
-
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "roof.jpeg" %>)">
+  Roof Finishing
+</div>
   </div>
 
   </div>
 
 </div>
+
+
+
+ <!-- <p style="text-align:left; padding-top: 64px; padding-left:24px;">Our aim is to instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas. Be part of Women in Construction Programmes.Our aim is to alleviate poverty & uplift our communities through Socio - Economic Development, Basic skills Development, Jump start job creation and a variety of training programmes such as :* Soft skills development,  * Entrepreneurship Programmes,  * Bricklaying (Masonry) *Plastering & Tiling  * Roof Finishing,  *Carpentry,  * Plumbing,  * Welding,  * Electronics.</p> -->
