--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  height:100px;
+  font-size:1.25rem;
 }
 
 .navbar-lewagon .navbar-collapse {
