--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,8 +15,11 @@
     </div>
   </div>
 </div>
-
 <div class="banner" style="background-color: #A7A8AA;">
+  <div class="container" style="background-color: #A7A8AA;">
 
+    <h1 class="mb-5" style="text-align: center; color:black; position:relative; margin:0 auto; padding-top: 88px;"> OUR PROGRAMMES</h1>
+
+  </div>
 
 </div>
