--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,9 @@
   <div class="container" style="background-color: #A7A8AA;">
 
     <h1 class="mb-5" style="text-align: center; color:black; position:relative; margin:0 auto; padding-top: 88px;"> OUR PROGRAMMES</h1>
+  <div class="articles-grid">
+
+  </div>
 
   </div>
 
