--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,27 @@
 
     <h1 class="mb-5" style="text-align: center; color:black; position:relative; margin:0 auto; padding-top: 88px;"> OUR PROGRAMMES</h1>
   <div class="articles-grid">
-
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "woodwork.jpeg" %>)">
+  Carpentry
+</div>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "plumbing.jpeg" %>)">
+  Plumbing
+</div>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "welding.jpeg" %>)">
+  Welding
+</div>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "entrepeneur.jpeg" %>)">
+  Entrepeneurship
+</div>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "electronics.jpeg" %>)">
+  Electronics
+</div>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "brick-masonry.jpeg" %>)">
+  Brick Laying/Masonry
+</div>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "roof.jpeg" %>)">
+  Roof Finishing
+</div>
   </div>
 
   </div>
