--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,14 +1,20 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: black;
   height:100px;
   font-size:1.25rem;
+  color:red;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+  color:red;
 }
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.nav-link{
+  color:red;
 }
