--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,31 @@
 
+
+
 <div class="banner" >
-  <div class="row"style="background-color:#ED4631;">
-    <div class="col-6 mt-3" style="background-color:#ED4631;align-items: center;">
+  <div class="row"style="background-color:#A7A8AA;">
+    <div class="col-8 mt-3" style="background-color:#A7A8AA;align-items: center; position: relative; margin:0 auto;">
       <div class="container">
 
         <h1 style="text-align: center; padding-top: 64px;" ><i> BREAKING BARRIERS TO LEARNING </i></h1>
-              <p style="text-align:left; padding-top: 64px; padding-left:24px;">We instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas.Through a variety of training programmes, as well as jump start job creation initiatives and basic skills develpoment programmes we aim to alleviate poverty and uplift our community. Be part of our Women in Construction Programmes. Some of our training programmes include : Soft skills development, Entrepreneurship Programmes, Bricklaying (Masonry), Plastering & Tiling , Roof Finishing,Carpentry, Plumbing, Welding, Electronics.</p>
 
       </div>
 
     </div>
-    <div class="col-6">
-        <%= image_tag "banner-1.jpg" %>
+
+<div class="col-6" style="padding-top: 40px;">
+
+              <p style="text-align:left; padding-top: 64px; padding-left:24px;">We instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas.Through a variety of training programmes, as well as jump start job creation initiatives and basic skills develpoment programmes we aim to alleviate poverty and uplift our community. Be part of our Women in Construction Programmes. Some of our training programmes include : Soft skills development, Entrepreneurship Programmes, Bricklaying (Masonry), Plastering & Tiling , Roof Finishing,Carpentry, Plumbing, Welding, Electronics.</p>
+
+
+</div>
+
+    <div class="col-6" style="padding-top: 80px;">
+
+
+
+
+        <%= image_tag "banner-1.jpg", class: "banpic" %>
+
     </div>
   </div>
 </div>
@@ -46,3 +60,7 @@
   </div>
 
 </div>
+
+
+
+<!--  <div class="row"style="background-color:#ED4631;"> -->
