--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,38 +1,41 @@
 
+<div class="banner" style="background-color: #A7A8AA; padding-bottom: 88px" >
 
 
-<div class="banner" >
-  <div class="row"style="background-color:#A7A8AA;">
+<div class="row">
+
     <div class="col-8 mt-3" style="background-color:#A7A8AA;align-items: center; position: relative; margin:0 auto;">
-      <div class="container">
-
-        <h1 style="text-align: center; padding-top: 64px;" ><i> BREAKING BARRIERS TO LEARNING </i></h1>
-
-      </div>
+        <h1 style="text-align: center; padding-top: 64px; color:black;" ><i> BREAKING BARRIERS TO LEARNING </i></h1>
 
     </div>
 
-<div class="col-6" style="padding-top: 40px;">
+</div>
 
-              <p style="text-align:left; padding-top: 64px; padding-left:24px;">We instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas.Through a variety of training programmes, as well as jump start job creation initiatives and basic skills develpoment programmes we aim to alleviate poverty and uplift our community. Be part of our Women in Construction Programmes. Some of our training programmes include : Soft skills development, Entrepreneurship Programmes, Bricklaying (Masonry), Plastering & Tiling , Roof Finishing,Carpentry, Plumbing, Welding, Electronics.</p>
+  <div class="container">
+  <div class="row"style="background-color:#A7A8AA;">
+
+<div class="col-8" style="padding-top: 40px;">
+
+              <p style="text-align:left; padding-top: 64px; justify-content: center;  color: black;">We instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas.Through a variety of training programmes, as well as jump start job creation initiatives and basic skills develpoment programmes we aim to alleviate poverty and uplift our community. Be part of our Women in Construction Programmes. Some of our training programmes include : Soft skills development, Entrepreneurship Programmes, Bricklaying (Masonry), Plastering & Tiling , Roof Finishing,Carpentry, Plumbing, Welding, Electronics.</p>
 
 
 </div>
 
-    <div class="col-6" style="padding-top: 80px;">
-
-
-
+    <div class="col-4" style="padding-top: 80px; padding-left: 24px;">
 
         <%= image_tag "banner-1.jpg", class: "banpic" %>
 
     </div>
   </div>
-</div>
-<div class="banner" style="background-color: #A7A8AA; padding-bottom: 56px;">
-  <div class="container" style="background-color: #A7A8AA;">
 
-    <h1 class="mb-5" style="text-align: center; color:black; position:relative; margin:0 auto; padding-top: 88px;"> OUR PROGRAMMES</h1>
+
+
+  </div>
+</div>
+<div class="banner" style="background-color: black;/*#A7A8AA; */padding-bottom: 56px;">
+  <div class="container" style="background-color: black;">
+
+    <h1 class="mb-5" style="text-align: center; color:white; position:relative; margin:0 auto; padding-top: 88px; padding-bottom: 88px;"> OUR PROGRAMMES</h1>
   <div class="articles-grid">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "woodwork.jpeg" %>)">
   Carpentry
@@ -60,7 +63,3 @@
   </div>
 
 </div>
-
-
-
-<!--  <div class="row"style="background-color:#ED4631;"> -->
