more on the about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,7 +16,7 @@
 
 <div class="col-8" style="padding-top: 40px;">
 
-              <p style="text-align:left; padding-top: 64px; justify-content: center;  color: black;">We instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas.Through a variety of training programmes, as well as jump start job creation initiatives and basic skills develpoment programmes we aim to alleviate poverty and uplift our community. Be part of our Women in Construction Programmes. Some of our training programmes include : Soft skills development, Entrepreneurship Programmes, Bricklaying (Masonry), Plastering & Tiling , Roof Finishing,Carpentry, Plumbing, Welding, Electronics.</p>
+              <p style="text-align:left; padding-top: 64px; justify-content: center;  color: black;"> Smart Multi Skills Hub is a registered non-profit organisation that aims to shape the future of our Communities.  We instill Fundamental Skills and share knowledge within impoverished communities like Eldoradopark and it's surrounding areas. Socio-economic development within our community is a priority for us. We believe in empowering our people through means of education and offer a number of training programmes as well as soft-skills development programmes, entrepeneurial programmes and jump start job creation initiatives. We are firm believers in the empowerment of women and run a number of women in construction programmes.</p>
 
 
 </div>
@@ -29,37 +29,23 @@
   </div>
 
 
+  <div class="row">
+    <div class="col-6">
+      <div><h2 style="padding-top: 80px; font-weight: 700;">Our Goals</h2></div>
+      <div>
+<h4 style="padding-top: 16px; font-weight: 500; ">To alleviate poverty and develop our community in our lifetime</h4 style="padding-top: 16px; font-weight: 500;">
+ <h4 style="padding-top: 16px; font-weight: 500;">To create opportunities for employment</h4 style="padding-top: 16px; font-weight: 500;">
+   <h4 style="padding-top: 16px; font-weight: 500;">To empower women within our community</h4 style="padding-top: 16px; font-weight: 500;">
+
+  <h4 style="padding-top: 16px; font-weight: 500;">To make knowlegde and education more accessible to people living in our communities</h4 style="padding-top: 16px; font-weight: 500;">
+
+
+
+    </div>
+    </div>
+  </div>
+
 
   </div>
 </div>
-<div class="banner" style="background-color: black;/*#A7A8AA; */padding-bottom: 56px;">
-  <div class="container" style="background-color: black;">
 
-    <h1 class="mb-5" style="text-align: center; color:white; position:relative; margin:0 auto; padding-top: 88px; padding-bottom: 88px;"> OUR PROGRAMMES</h1>
-  <div class="articles-grid">
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "woodwork.jpeg" %>)">
-  Carpentry
-</div>
-<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "plumbing.jpeg" %>)">
-  Plumbing
-</div>
-<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "welding.jpeg" %>)">
-  Welding
-</div>
-<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "entrepeneur.jpeg" %>)">
-  Entrepeneurship
-</div>
-<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "electronics.jpeg" %>)">
-  Electronics
-</div>
-<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "brick-masonry.jpeg" %>)">
-  Brick Laying/Masonry
-</div>
-<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "roof.jpeg" %>)">
-  Roof Finishing
-</div>
-  </div>
-
-  </div>
-
-</div>
