rudimentary contact page in

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,13 @@
-contact.html.erb
+<div class="container">
+  <div class="row" style="height:75vh">
+    <h1 class="mt-5" style="font-weight: 700; font-size: 2.75rem;">Please get in touch with us hesitate to get in touch with us for more information.</h1>
+    <div class="col-6">
+      <h2 class="mt-5" style="padding-bottom: 24px; font-weight:700;">Contact Details</h2>
+      <h3 style="padding-top: 16px; font-weight: 700;">Director: Arlene Lapan</h3 style="padding-top: 16px; font-weight: 700;">
+      <h3 style="padding-top: 16px; font-weight: 700;">Cell: +27605640995</h3 style="padding-top: 16px; font-weight: 700;">
+      <h3 style="padding-top: 16px; font-weight: 700;">Email Address: arlenelapan@gmail.com</h3 style="padding-top: 16px; font-weight: 700;">
+      <h3 style="padding-top: 16px; font-weight: 700;padding-bottom: 32px;">Address: 24 Oranjezicht Street, Eldorado Park</h3 style="padding-top: 16px; font-weight: 700;">
+
+    </div>
+  </div>
+</div>
