--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,12 +1,25 @@
 <div class="container">
   <div class="row" style="height:75vh">
-    <h1 class="mt-5" style="font-weight: 700; font-size: 2.75rem;">Please get in touch with us hesitate to get in touch with us for more information.</h1>
+    <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Please get in touch with us for more information.</h1>
     <div class="col-6">
-      <h2 class="mt-5" style="padding-bottom: 24px; font-weight:700;">Contact Details</h2>
-      <h3 style="padding-top: 16px; font-weight: 700;">Director: Arlene Lapan</h3 style="padding-top: 16px; font-weight: 700;">
-      <h3 style="padding-top: 16px; font-weight: 700;">Cell: +27605640995</h3 style="padding-top: 16px; font-weight: 700;">
-      <h3 style="padding-top: 16px; font-weight: 700;">Email Address: arlenelapan@gmail.com</h3 style="padding-top: 16px; font-weight: 700;">
-      <h3 style="padding-top: 16px; font-weight: 700;padding-bottom: 32px;">Address: 24 Oranjezicht Street, Eldorado Park</h3 style="padding-top: 16px; font-weight: 700;">
+      <h2 class="mt-5" style="padding-bottom: 24px; font-weight:700; font-size: 2.5rem;">Contact Details</h2>
+      <div class="d-flex" style="align-items: left;">
+
+     <i class="fas fa-street-view" style="padding-top: 40px;padding-right: 36px;font-size: 1.5rem;"></i> <h3 style="padding-top: 32px; font-weight: 700; ">Director: Arlene Lapan</h3 style="padding-top: 16px; font-weight: 700;">
+
+      </div>
+        <div class="d-flex" style=" align-items: left;">
+      <i class="fas fa-mobile-alt" style="padding-top: 40px; padding-right: 40px;font-size: 1.5rem;"></i><h3 style="padding-top: 32px; padding-left: -250px; font-weight: 700;">Cell: +27605640995</h3>
+
+        </div>
+        <div style="justify-content: space-between; display: flex;">
+      <i class="far fa-envelope" style="padding-top: 40px; font-size: 1.5rem;"></i><h3 style="padding-top: 32px; font-weight: 700;">Email Address: arlenelapan@gmail.com</h3>
+
+        </div>
+        <div class="d-flex" style="align-items:left;">
+     <i class="fas fa-map-marker-alt" style="padding-top: 40px;padding-right: 36px;font-size: 1.5rem;"></i> <h3 style="padding-top: 32px; font-weight: 700;padding-bottom: 32px;">Address: 24 Oranjezicht Street, Eldorado Park</h3 style="padding-top: 16px; font-weight: 700;">
+
+        </div>
 
     </div>
   </div>
