--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
       </p>
 
             <p class="nav-item active">
-        <%= link_to "Make a Donation", about_path, class: "nav-link" %>
+        <%= link_to "Donate", donations_path, class: "nav-link" %>
       </p>
 
 
