--- a/app/views/pages/carpentry.html.erb
+++ b/app/views/pages/carpentry.html.erb
@@ -1,1 +1,31 @@
-carpentry.html.erb
+<div class="container">
+  <div class="row" >
+    <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
+    <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Carpentry</h1>
+
+    </div>
+    <div class="col-6">
+
+    <h2 style="padding-top: 24px; padding-bottom: 40px;"> COMMON QUESTIONS ABOUT THE PROGRAMME </h2>
+      <h3 > How long is the program?</h3>
+      <h3 style="padding-bottom: 32px;"> 4 Weeks </h3>
+      <h3 style="padding-bottom: 32px;"> What will I learn?</h3>
+      <ul>
+      <li> Fundamentals of Carpentry </li>
+      <li> Gain insight and knowledge of tools and their uses in the workshop </li>
+      <li> Fundemental tecnhniques of basic carpentry </li>
+      <li> Practical hands on experience jointing, planing, sanding, routing.</li>
+
+    </ul>
+      <h3 style="padding-bottom: 32px; padding-top:32px;"> How will this empower me?</h3>
+            <ul>
+      <li> Gain new skills and broaden opportunities for employment </li>
+      <li> Potential to hone a new skill and become an entrepeneur. </li>
+      <li> You will have gained another skill for your cv</li>
+
+    </ul>
+
+    </div>
+
+  </div>
+</div>
