--- a/app/views/pages/donations.html.erb
+++ b/app/views/pages/donations.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row" style="height:80vh">
-    <div class="col-8">
+    <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Thank you for choosing to make a donation.</h1>
-    <h2> There are two options to make your donation: </h2>
+    <h2 style="padding-top: 24px;"> There are two options to make your donation: </h2>
 
     </div>
     <div class="col-6">
