--- a/app/views/pages/carpentry.html.erb
+++ b/app/views/pages/carpentry.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row" >
     <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
-    <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Carpentry</h1>
+    <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem; padding-bottom: 56px;">Carpentry</h1>
 
     </div>
     <div class="col-6">
@@ -16,16 +16,28 @@
       <li> Fundemental tecnhniques of basic carpentry </li>
       <li> Practical hands on experience jointing, planing, sanding, routing.</li>
 
-    </ul>
+    </ul >
       <h3 style="padding-bottom: 32px; padding-top:32px;"> How will this empower me?</h3>
             <ul>
       <li> Gain new skills and broaden opportunities for employment </li>
       <li> Potential to hone a new skill and become an entrepeneur. </li>
-      <li> You will have gained another skill for your cv</li>
+      <li style="padding-bottom: 40px;"> You will have gained another skill for your cv</li>
 
     </ul>
 
     </div>
+
+
+    <div class="col-6">
+
+    <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE CARPENTRY RESOURCES </h2>
+<%= link_to "https://www.woodworkersworkshop.com/resources/index.php?cat=102", target: :blank do%>
+<div><%= image_tag "wwws.jpg" %> </div>
+<% end %>
+
+
+    </div>
+
 
   </div>
 </div>
