--- a/app/assets/stylesheets/pages/_carpentry.scss
+++ b/app/assets/stylesheets/pages/_carpentry.scss
@@ -1,3 +1,12 @@
 li{
   font-size: 1.5rem;
 }
+
+h3{
+  font-size: 2.25rem;
+  font-weight: 700;
+}
+h2{
+    font-size: 2.75rem;
+  font-weight: 700;
+}
