more resources in

--- a/app/views/pages/carpentry.html.erb
+++ b/app/views/pages/carpentry.html.erb
@@ -31,10 +31,20 @@
     <div class="col-6">
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE CARPENTRY RESOURCES </h2>
+
+    <h3 class="my-5" style="padding-top: 16px;"> Websites for designs/plans and tips</h3>
 <%= link_to "https://www.woodworkersworkshop.com/resources/index.php?cat=102", target: :blank do%>
 <div><%= image_tag "wwws.jpg" %> </div>
 <% end %>
 
+<%= link_to "https://woodworkjunkie.com/", target: :blank do%>
+<div style="padding-top: 40px;"><%= image_tag "woodjunkie.png" %> </div>
+<% end %>
+
+<h3 style="padding-top:40px;"> Free online carpentry courses </h3>
+<%= link_to "https://alison.com/courses?query=woodwork", target: :blank do%>
+<div style="padding-top: 40px; "><%= image_tag "alison.png", class: "black-back" %> </div>
+<% end %>
 
     </div>
 
