--- a/app/views/pages/donations.html.erb
+++ b/app/views/pages/donations.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="row" style="height:80vh">
+  <div class="row">
     <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Thank you for choosing to make a donation.</h1>
-    <h2 style="padding-top: 24px;"> There are two options to make your donation: </h2>
+    <h2 style="padding-top: 24px; padding-bottom: 56px;"> There are two options to make your donation: </h2>
 
     </div>
     <div class="col-6">
@@ -16,7 +16,7 @@
     <h3>First National Bank</h3>
       <h3>Branch Name: Eastgate</h3>
       <h3>Branch Code: 210651</h3>
-      <h3>Account Number: 1012767701</h3>
+      <h3 style="padding-bottom: 56px;">Account Number: 1012767701</h3>
 
     </div>
   </div>
