--- a/app/views/pages/bricks.html.erb
+++ b/app/views/pages/bricks.html.erb
@@ -11,16 +11,17 @@
       <h3 style="padding-bottom: 32px;"> 4 Weeks </h3>
       <h3 style="padding-bottom: 32px;"> What will I learn?</h3>
       <ul>
-      <li> Fundamentals of Carpentry </li>
-      <li> Gain insight and knowledge of tools and their uses in the workshop </li>
-      <li> Fundemental tecnhniques of basic carpentry </li>
-      <li> Practical hands on experience jointing, planing, sanding, routing.</li>
+      <li> Fundamentals of masonry </li>
+      <li> Gain insight and knowledge of tools and their uses on site. </li>
+      <li> Fundemental tecnhniques of basic brick-laying </li>
+      <li> Practical hands on experience cement-mixing, brick laying</li>
 
     </ul >
       <h3 style="padding-bottom: 32px; padding-top:32px;"> How will this empower me?</h3>
             <ul>
-      <li> Gain new skills and broaden opportunities for employment </li>
+      <li> Gain new skills and broaden opportunities for employment. </li>
       <li> Potential to hone a new skill and become an entrepeneur. </li>
+      <li> You will have gained skills to help you repair or rejuivinate your own home. </li>
       <li style="padding-bottom: 40px;"> You will have gained another skill for your cv</li>
 
     </ul>
@@ -32,18 +33,19 @@
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE BRICK-LAYING RESOURCES </h2>
 
-    <h3 class="my-5" style="padding-top: 16px;"> Websites for designs/plans and tips</h3>
-<%= link_to "https://www.woodworkersworkshop.com/resources/index.php?cat=102", target: :blank do%>
-<div><%= image_tag "wwws.jpg" %> </div>
+    <h3 class="my-5" style="padding-top: 16px;"> Brick-Laying Made easy: Free dowloadable brick-laying guides.  </h3>
+<%= link_to "https://claybrick.org/bricklaying-made-easy", target: :blank do%>
+<div><%= image_tag "claybrick.png" %> </div>
+<% end %>
+    <h3 class="my-5" style="padding-top: 16px;"> A guide to basic bricklaying, by Terry Jones </h3>
+
+<%= link_to "https://media.freeola.com/other/18033/bonusbook1_aguidetobasicbricklaying_.pdf", target: :blank do%>
+<div style="padding-top: 24px;"><%= image_tag "tj.png" %> </div>
 <% end %>
 
-<%= link_to "https://woodworkjunkie.com/", target: :blank do%>
-<div style="padding-top: 40px;"><%= image_tag "woodjunkie.png" %> </div>
-<% end %>
-
-<h3 style="padding-top:40px;"> Free online brick-laying courses </h3>
-<%= link_to "https://alison.com/courses?query=woodwork", target: :blank do%>
-<div style="padding-top: 40px; "><%= image_tag "alison.png", class: "black-back" %> </div>
+<h3 style="padding-top:40px;"> Free online introduction to masonry course </h3>
+<%= link_to "https://alison.com/course/introduction-to-masonry", target: :blank do%>
+<div style="padding-top: 40px; padding-bottom: 40px; "><%= image_tag "alison.png", class: "black-back" %> </div>
 <% end %>
 
     </div>
