--- a/app/views/pages/plumbing.html.erb
+++ b/app/views/pages/plumbing.html.erb
@@ -11,16 +11,18 @@
       <h3 style="padding-bottom: 32px;"> 4 Weeks </h3>
       <h3 style="padding-bottom: 32px;"> What will I learn?</h3>
       <ul>
-      <li> Fundamentals of Carpentry </li>
-      <li> Gain insight and knowledge of tools and their uses in the workshop </li>
-      <li> Fundemental tecnhniques of basic carpentry </li>
-      <li> Practical hands on experience jointing, planing, sanding, routing.</li>
+      <li> Fundamentals of Plumbing </li>
+      <li> Gain insight and knowledge of tools and their uses. </li>
+      <li> Fundemental tecnhniques of basic plumbing </li>
+      <li> Practical hands on experience.</li>
 
     </ul >
       <h3 style="padding-bottom: 32px; padding-top:32px;"> How will this empower me?</h3>
             <ul>
       <li> Gain new skills and broaden opportunities for employment </li>
       <li> Potential to hone a new skill and become an entrepeneur. </li>
+            <li> You will have gained skills to help you repair or rejuivinate your own home. </li>
+
       <li style="padding-bottom: 40px;"> You will have gained another skill for your cv</li>
 
     </ul>
@@ -32,18 +34,19 @@
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE PLUMBING RESOURCES </h2>
 
-    <h3 class="my-5" style="padding-top: 16px;"> Websites for designs/plans and tips</h3>
-<%= link_to "https://www.woodworkersworkshop.com/resources/index.php?cat=102", target: :blank do%>
-<div><%= image_tag "wwws.jpg" %> </div>
+    <h3 class="my-5" style="padding-top: 16px;"> Practical Plumbing Handbook (pdf)</h3>
+<%= link_to "https://p2infohouse.org/ref/36/35594.pdf", target: :blank do%>
+<div><%= image_tag "phb.png" %> </div>
 <% end %>
+    <h3 class="my-5" style="padding-top: 16px;"> Household connectivity refresher course (pdf)</h3>
 
-<%= link_to "https://woodworkjunkie.com/", target: :blank do%>
-<div style="padding-top: 40px;"><%= image_tag "woodjunkie.png" %> </div>
+<%= link_to "http://www.urbansanitation.org/live/hrdpmp/hrdpmaster/hrdp-asem/content/e30293/e31169/e49811/e60457/PlumbersManual.pdf", target: :blank do%>
+<div style="padding-top: 40px;"><%= image_tag "refresh.png" %> </div>
 <% end %>
 
 <h3 style="padding-top:40px;"> Free online plumbing courses </h3>
-<%= link_to "https://alison.com/courses?query=woodwork", target: :blank do%>
-<div style="padding-top: 40px; "><%= image_tag "alison.png", class: "black-back" %> </div>
+<%= link_to "https://alison.com/courses/plumbing", target: :blank do%>
+<div style="padding-top: 40px; padding-bottom: 56px;"><%= image_tag "alison.png", class: "black-back" %> </div>
 <% end %>
 
     </div>
