--- a/app/views/pages/welding.html.erb
+++ b/app/views/pages/welding.html.erb
@@ -11,10 +11,12 @@
       <h3 style="padding-bottom: 32px;"> 4 Weeks </h3>
       <h3 style="padding-bottom: 32px;"> What will I learn?</h3>
       <ul>
-      <li> Fundamentals of Carpentry </li>
-      <li> Gain insight and knowledge of tools and their uses in the workshop </li>
-      <li> Fundemental tecnhniques of basic carpentry </li>
-      <li> Practical hands on experience jointing, planing, sanding, routing.</li>
+      <li> Fundamentals of Welding </li>
+      <li> Gain insight and knowledge of tools and their uses in the workplace </li>
+      <li> Fundemental tecnhniques of basic welding </li>
+      <li>Learn to safely handle Welding equiptment.</li>
+      <li>Welding safety protocol</li>
+      <li> Practical hands on experience.</li>
 
     </ul >
       <h3 style="padding-bottom: 32px; padding-top:32px;"> How will this empower me?</h3>
@@ -32,13 +34,13 @@
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE WELDING RESOURCES </h2>
 
-    <h3 class="my-5" style="padding-top: 16px;"> Websites for designs/plans and tips</h3>
-<%= link_to "https://www.woodworkersworkshop.com/resources/index.php?cat=102", target: :blank do%>
-<div><%= image_tag "wwws.jpg" %> </div>
+    <h3 class="my-5" style="padding-top: 16px;"> Welding Guides</h3>
+<%= link_to "https://www.wilhelmsen.com/globalassets/marine-products/welding/documents/wilhelmsen-ships-service---unitor-welding-handbook.pdf", target: :blank do%>
+<div style=""><%= image_tag "whb.png" %> </div>
 <% end %>
 
-<%= link_to "https://woodworkjunkie.com/", target: :blank do%>
-<div style="padding-top: 40px;"><%= image_tag "woodjunkie.png" %> </div>
+<%= link_to "https://staff.emu.edu.tr/mohammedasmael/Documents/courses/MENG364%20%20%20%20%20Manufacturing%20Technology/WELDING%20PROCESSES.pdf", target: :blank do%>
+<div style="padding-top: 40px;"><%= image_tag "wel.png" %> </div>
 <% end %>
 
 <h3 style="padding-top:40px;"> Free online welding courses </h3>
