--- a/app/views/pages/entrepeneurship.html.erb
+++ b/app/views/pages/entrepeneurship.html.erb
@@ -11,17 +11,18 @@
       <h3 style="padding-bottom: 32px;"> 4 Weeks </h3>
       <h3 style="padding-bottom: 32px;"> What will I learn?</h3>
       <ul>
-      <li> Fundamentals of Carpentry </li>
-      <li> Gain insight and knowledge of tools and their uses in the workshop </li>
-      <li> Fundemental tecnhniques of basic carpentry </li>
-      <li> Practical hands on experience jointing, planing, sanding, routing.</li>
+      <li> Business Fundamentals </li>
+      <li> Soft skills for workplace interaction </li>
+      <li> Money management</li>
+      <li> Good business practices</li>
 
     </ul >
       <h3 style="padding-bottom: 32px; padding-top:32px;"> How will this empower me?</h3>
             <ul>
-      <li> Gain new skills and broaden opportunities for employment </li>
-      <li> Potential to hone a new skill and become an entrepeneur. </li>
-      <li style="padding-bottom: 40px;"> You will have gained another skill for your cv</li>
+      <li> Gain new skills and knowledge </li>
+      <li>You are one step closer to being capable of running your dream business. </li>
+      <li>Improve the efficiency of your already existing business.</li>
+      <li style="padding-bottom: 56px;"> Employ yourself and become less dependent on others for your income </li>
 
     </ul>
 
@@ -33,7 +34,7 @@
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE ENTREPENEURSHIP RESOURCES </h2>
 
     <h3 class="my-5" style="padding-top: 16px;"> Websites for designs/plans and tips</h3>
-<%= link_to "https://www.woodworkersworkshop.com/resources/index.php?cat=102", target: :blank do%>
+<%= link_to "https://www.cmu.edu/swartz-center-for-entrepreneurship/education-and-resources/project-olympus/pdf/entrepreneurship-101.pdf", target: :blank do%>
 <div><%= image_tag "wwws.jpg" %> </div>
 <% end %>
 
@@ -42,7 +43,7 @@
 <% end %>
 
 <h3 style="padding-top:40px;"> Free online Entrepeneurship courses </h3>
-<%= link_to "https://alison.com/courses?query=woodwork", target: :blank do%>
+<%= link_to "https://alison.com/courses/entrepreneurship", target: :blank do%>
 <div style="padding-top: 40px; "><%= image_tag "alison.png", class: "black-back" %> </div>
 <% end %>
 
