--- a/app/views/pages/entrepeneurship.html.erb
+++ b/app/views/pages/entrepeneurship.html.erb
@@ -33,13 +33,13 @@
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE ENTREPENEURSHIP RESOURCES </h2>
 
-    <h3 class="my-5" style="padding-top: 16px;"> Websites for designs/plans and tips</h3>
-<%= link_to "https://www.cmu.edu/swartz-center-for-entrepreneurship/education-and-resources/project-olympus/pdf/entrepreneurship-101.pdf", target: :blank do%>
-<div><%= image_tag "wwws.jpg" %> </div>
+    <h3 class="my-5" style="padding-top: 16px;"> Guidelines and tips for entrepeneurs</h3>
+<%= link_to "https://media1-production.mightynetworks.com/asset/4483247/Harvard_Business_Review_Entrepreneur_s_Handbook.pdf", target: :blank do%>
+<div><%= image_tag "hbr.png" %> </div>
 <% end %>
 
-<%= link_to "https://woodworkjunkie.com/", target: :blank do%>
-<div style="padding-top: 40px;"><%= image_tag "woodjunkie.png" %> </div>
+<%= link_to "https://www.efmdglobal.org/wp-content/uploads/The-Entrepreneurs-Guide-to-Building-a-Successful-Business-2017.pdf", target: :blank do%>
+<div style="padding-top: 40px;"><%= image_tag "ent.png" %> </div>
 <% end %>
 
 <h3 style="padding-top:40px;"> Free online Entrepeneurship courses </h3>
