electronics page in

--- a/app/views/pages/electronics.html.erb
+++ b/app/views/pages/electronics.html.erb
@@ -32,17 +32,20 @@
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE ELECTRONICS RESOURCES </h2>
 
-    <h3 class="my-5" style="padding-top: 16px;"> Websites for designs/plans and tips</h3>
-<%= link_to "https://www.woodworkersworkshop.com/resources/index.php?cat=102", target: :blank do%>
-<div><%= image_tag "wwws.jpg" %> </div>
+    <h3 class="my-5" style="padding-top: 16px;"> Downloadable Electronics Guides</h3>
+<%= link_to "https://electronicsforfun.weebly.com/uploads/1/7/6/5/17652675/practical_electronics_handbook_sixth_edition.pdf", target: :blank do%>
+<div style="width:300px; height:150px; text-align: center; align-items: center; background-color: black;"> <p style="font-size:1.5rem; color: white; padding-top: 40px;"> Practical Electronics Handbook</p> </div>
 <% end %>
 
-<%= link_to "https://woodworkjunkie.com/", target: :blank do%>
-<div style="padding-top: 40px;"><%= image_tag "woodjunkie.png" %> </div>
+<br><br>
+<%= link_to "http://engineering.nyu.edu/gk12/amps-cbri/pdf/Basic%20Electronics.pdf", target: :blank do%>
+<div style="width:300px; height:150px; text-align: center; align-items: center; background-color: black;"> <p style="font-size:1.5rem; color: white; padding-top: 56px;"> Basic Electronics</p> </div>
 <% end %>
+
+
 
 <h3 style="padding-top:40px;"> Free online electronics courses </h3>
-<%= link_to "https://alison.com/courses?query=woodwork", target: :blank do%>
+<%= link_to "https://alison.com/courses?query=electronics", target: :blank do%>
 <div style="padding-top: 40px; "><%= image_tag "alison.png", class: "black-back" %> </div>
 <% end %>
 
