--- a/app/views/pages/roof.html.erb
+++ b/app/views/pages/roof.html.erb
@@ -11,16 +11,18 @@
       <h3 style="padding-bottom: 32px;"> 4 Weeks </h3>
       <h3 style="padding-bottom: 32px;"> What will I learn?</h3>
       <ul>
-      <li> Fundamentals of Carpentry </li>
-      <li> Gain insight and knowledge of tools and their uses in the workshop </li>
-      <li> Fundemental tecnhniques of basic carpentry </li>
-      <li> Practical hands on experience jointing, planing, sanding, routing.</li>
+      <li> Fundamentals of Roof finishing </li>
+      <li> Gain insight and knowledge of tools and their uses in fixing and finishing rooves </li>
+      <li> Fundemental tecnhniques of roof tiling </li>
+      <li> Practical hands on experience.</li>
 
     </ul >
       <h3 style="padding-bottom: 32px; padding-top:32px;"> How will this empower me?</h3>
             <ul>
       <li> Gain new skills and broaden opportunities for employment </li>
       <li> Potential to hone a new skill and become an entrepeneur. </li>
+            <li> You will have gained skills to help you repair or rejuivinate your own home. </li>
+
       <li style="padding-bottom: 40px;"> You will have gained another skill for your cv</li>
 
     </ul>
